--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PIDT_IR
-version=2.0
+version=0.1.0
 author=Müller, Heinz
-maintainer=Eschenbronner
+maintainer=true
 sentence=PIDT controller for brushed dc motors. 
 paragraph=
 category=Tools
-url=https://github.com/HeinzMu/PIDT_IR
+url=https://github.com/HeinzMu/PIDT_IR.git
 architectures=avr
