--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,7 @@
 [platformio]
 
 description =	Library for a universal software controller for brushed dc motors like the one from ULTECHNOVO
-				(availiable at https://www.amazon.de/ULTECHNOVO-Getriebemotor-Magnetgetriebe-Spielzeug-Fahrgestell/dp/B08HDF9LVL
-				or at 
+				(availiable at https://www.amazon.de/ULTECHNOVO-Getriebemotor-Magnetgetriebe-Spielzeug-Fahrgestell/dp/B08HDF9LVL)
  				running on Arduino Mega2560.
 				You can coose a P, I, D, PI, PD, PID or a PT1 controller.
 
